k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ikno-website
  labels:
    app: ikno-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ikno-website
  template:
    metadata:
      labels:
        app: ikno-website
    spec:
      containers:
        - name: ikno-website
          image: ghcr.io/charemma/ikno-web:latest
          ports:
            - containerPort: 80
