k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ikno-website
spec:
  selector:
    app: ikno-website
  ports:
    - port: 80
      targetPort: 80
