k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ikno-website
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: ikno.charemma.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ikno-website
                port:
                  number: 80
  tls:
    - hosts:
        - ikno.charemma.de
